foo/foo-pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: foo-new-app
  labels:
    app: foo
spec:
  containers:
    - name: foo-app
      image: 'kicbase/echo-server:1.0'
